# ChustomerChurn_app

./: final_cc_app.py  pyproject.toml  scaler.pkl
