[project]
name = "customerchurn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.4.2",
    "missingno>=0.5.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.41.1",
    "xgboost>=2.1.3",
]
